[tool.poetry]
name = "themetools"
version = "0.1.0"
description = ""
authors = ["michaeldel <michaeldel@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyjson5 = "^1.4.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
mypy = "^0.782"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.black]
target-version = ['py38']

line-length = 88
skip-string-normalization = true

include = '\.pyi?$'
exclude = '\/\..+$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

